fix: Add P1 security fixes (bd-coo, bd-7zx)
- SECRET_KEY enforcement: Raise error if default key used in production
- IDOR fix: Add user_id filtering to get_location function
- Add auth dependencies: python-jose, passlib, bcrypt, slowapi
- Add tests for SECRET_KEY validation
- Document secure key generation in README

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ POSTGRES_PORT=5432
 
 # Application Settings
 DEBUG=false
+# ENV=production  # Set to 'production' or 'prod' for production deployments
+
+# Security - REQUIRED for production (when DEBUG=false or ENV=production)
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+# SECRET_KEY=your-secure-random-key-here
+# JWT_SECRET_KEY=your-jwt-secret-here  # Alternative: JWT-specific key
 
 # Optional: For embeddings generation (OpenAI)
 # OPENAI_API_KEY=sk-...
