--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
     "azure-identity>=1.15.0",
     "playwright>=1.58.0",
     "httpx>=0.28.1",
+    "python-jose>=3.5.0",
+    "passlib>=1.7.4",
+    "slowapi>=0.1.9",
+    "bcrypt>=5.0.0",
 ]
 
 [project.optional-dependencies]
